@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam classFontSize 13
skinparam packageStyle rectangle

class RemarkCommand {
    --
    + execute(model: Model) : CommandResult
    - generateSuccessMessage(personToEdit: Person) : String
}

class "{abstract}\nCommand" as Command {
    + {abstract} execute(model: Model) : CommandResult
}

class Index

class "<<interface>>\nModel" as Model {
}

class Remark {
    + value
}

class CommandResult

' Relationships with multiplicities
RemarkCommand --|> Command
RemarkCommand ..> CommandResult : returns >
RemarkCommand --> "1" Index : index
RemarkCommand --> "1" Remark : remark
RemarkCommand ..> Model : uses >
Command ...> Model : uses >
@enduml
